--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h2>Afbeeldingen toevoegen</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/plus.png">
                     </div>
                 </header>
                 <section>
