--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <h2>Release</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/download.png">
                     </div>
                 </header>
                 <section>
